Several bugfix